@@ -1,5 +1,7 @@
 2013-01-05  Russ Allbery  <rra@stanford.edu>
 
+	* t/synopsis.t: New test for the syntax of SYNOPSIS code.
+
 	* t/minimum-version.t: New test for the minimum required version
 	of Perl.
 
